# pcl_learning

./: .gitignore  CMakeLists.txt  readme.md
01-basic_usage/: CMakeLists.txt
01-basic_usage/src/: matrix_transform.cpp  ply2pcd.cpp  view_pcd.cpp  write_pcd.cpp
01-using_pcl_in_own_project/: CMakeLists.txt
02-advanced_usage/: CMakeLists.txt
02-advanced_usage/src/: 01_adding_custom_ptype.cpp
03-pcl_feature/: CMakeLists.txt
03-pcl_feature/pcd/: test_pcd.pcd
03-pcl_feature/src/: 01_normal_estimation.cpp  02_normal_estimation_using_integral_images.cpp  03_pfh_estimation.cpp  04_fpfh_estimation.cpp  05_vfh_estimation.cpp
04-pcl_visualization/: CMakeLists.txt
04-pcl_visualization/src/: 02_multithread_pcd_viewer.cpp  03_range_image_viewer.cpp  04_pcl_visualizer.cpp
05-pcl_filter/: CMakeLists.txt
05-pcl_filter/src/: 01_filter_PassThrough.cpp  02_filter_VoxelGrid.cpp  02_filter_voxelGrid.cpp  02_filter_voxelgrid.cpp  03_filter_StatisticalOutlierRemoval.cpp  04_filter_RadiusOutlierRemoval.cpp  05_filter_ConditionalRemoval.cpp  06_filter_BilateralFilter.cpp  07_filter_ProjectInliers.cpp  08_filter_ExtractIndices.cpp
06-pcl_recognition/: CMakeLists.txt
06-pcl_recognition/src/: 01_recognition_CorrespondenceGrouping.cpp  02_recognition_ImplicitShapeModel.cpp  03_recognition_3DHypothesisVerification.cpp  04_recognition_PeachCorrGrouping.cpp
07-pcl_registration/: CMakeLists.txt
07-pcl_registration/src/: 01_registration_ICP.cpp  02_registration_IncrementRegist.cpp  03_registration_PeachRegist.cpp
pcd/: 1.pcd  peach.pcd  peach_rec.pcd
